@@ -18,10 +18,13 @@
 package org.apache.shardingsphere.mcp.feature.encrypt.tool.service;
 
 import org.apache.shardingsphere.mcp.feature.encrypt.tool.model.EncryptWorkflowRequest;
+import org.apache.shardingsphere.mcp.feature.encrypt.tool.model.EncryptWorkflowState;
+import org.apache.shardingsphere.mcp.support.database.metadata.model.MCPDatabaseMetadata;
 import org.apache.shardingsphere.mcp.support.database.spi.MCPFeatureExecutionFacade;
 import org.apache.shardingsphere.mcp.support.database.spi.MCPFeatureQueryFacade;
 import org.apache.shardingsphere.mcp.support.database.spi.MCPMetadataQueryFacade;
 import org.apache.shardingsphere.mcp.support.workflow.WorkflowSessionContext;
+import org.apache.shardingsphere.mcp.support.workflow.model.DerivedColumnPlan;
 import org.apache.shardingsphere.mcp.support.workflow.model.RuleWorkflowFeatureData;
 import org.apache.shardingsphere.mcp.support.workflow.model.ValidationReport;
 import org.apache.shardingsphere.mcp.support.workflow.model.ValidationSection;
@@ -61,7 +64,7 @@ public final class EncryptWorkflowValidationService implements MCPWorkflowRuntim
         if (!rejectedResponse.isEmpty()) {
             return rejectedResponse;
         }
-        ValidationReport validationReport = createValidationReport(snapshot, queryFacade);
+        ValidationReport validationReport = createValidationReport(snapshot, metadataQueryFacade, queryFacade, executionFacade, sessionId);
         snapshot.setValidationReport(validationReport);
         return validationSupport.finalizeValidation(workflowSessionContext, snapshot, validationReport);
     }
@@ -69,16 +72,27 @@ public final class EncryptWorkflowValidationService implements MCPWorkflowRuntim
     @Override
     public void synchronize(final WorkflowContextSnapshot snapshot, final MCPMetadataQueryFacade metadataQueryFacade,
                             final MCPFeatureQueryFacade queryFacade, final MCPFeatureExecutionFacade executionFacade, final String sessionId) {
-        workflowSynchronizationSupport.synchronize(() -> createValidationReport(snapshot, queryFacade));
+        workflowSynchronizationSupport.synchronize(() -> createValidationReport(snapshot, metadataQueryFacade, queryFacade, executionFacade, sessionId));
     }
     
-    private ValidationReport createValidationReport(final WorkflowContextSnapshot snapshot, final MCPFeatureQueryFacade queryFacade) {
+    private ValidationReport createValidationReport(final WorkflowContextSnapshot snapshot, final MCPMetadataQueryFacade metadataQueryFacade,
+                                                    final MCPFeatureQueryFacade queryFacade, final MCPFeatureExecutionFacade executionFacade, final String sessionId) {
         ValidationReport result = new ValidationReport();
         EncryptWorkflowRequest request = getWorkflowRequest(snapshot);
-        String databaseType = queryFacade.getDatabaseType(request.getDatabase());
         List<Map<String, Object>> encryptRules = ruleInspectionService.queryEncryptRules(queryFacade, request.getDatabase(), request.getTable());
+        Optional<EncryptWorkflowState> workflowState = getEncryptWorkflowState(snapshot);
+        String databaseType = workflowState.isPresent()
+                ? metadataQueryFacade.queryDatabase(WorkflowSQLUtils.normalizeIdentifier(request.getDatabase())).map(MCPDatabaseMetadata::getDatabaseType)
+                        .orElse(queryFacade.getDatabaseType(request.getDatabase()))
+                : queryFacade.getDatabaseType(request.getDatabase());
+        workflowState.ifPresent(optional -> result.setDdlValidation(validateDdl(snapshot, optional, encryptRules, result, databaseType)));
         result.setRuleValidation(validateRules(snapshot, request, encryptRules, result, databaseType));
-        result.setOverallStatus(validationSupport.resolveOverallStatus(result.getRuleValidation()));
+        if (workflowState.isPresent()) {
+            result.setLogicalMetadataValidation(validationSupport.validateLogicalMetadata(snapshot, metadataQueryFacade, result));
+            result.setSqlExecutabilityValidation(validateSqlExecutability(executionFacade, sessionId, snapshot, request, result, databaseType));
+        }
+        result.setOverallStatus(validationSupport.resolveOverallStatus(result.getDdlValidation(), result.getRuleValidation(),
+                result.getLogicalMetadataValidation(), result.getSqlExecutabilityValidation()));
         return result;
     }
     
@@ -90,11 +104,48 @@ public final class EncryptWorkflowValidationService implements MCPWorkflowRuntim
         return null == result ? new EncryptWorkflowRequest() : result;
     }
     
+    private Optional<EncryptWorkflowState> getEncryptWorkflowState(final WorkflowContextSnapshot snapshot) {
+        return snapshot.getFeatureData() instanceof EncryptWorkflowState ? Optional.of((EncryptWorkflowState) snapshot.getFeatureData()) : Optional.empty();
+    }
+    
+    private ValidationSection validateDdl(final WorkflowContextSnapshot snapshot, final EncryptWorkflowState workflowState,
+                                          final List<Map<String, Object>> encryptRules, final ValidationReport validationReport, final String databaseType) {
+        if (WorkflowLifecycleUtils.isDropWorkflow(snapshot)) {
+            return new ValidationSection(WorkflowLifecycle.STATUS_SKIPPED, List.of(), "Encrypt drop does not validate physical cleanup in V1.");
+        }
+        DerivedColumnPlan derivedColumnPlan = workflowState.getDerivedColumnPlan();
+        if (null == derivedColumnPlan) {
+            return new ValidationSection(WorkflowLifecycle.STATUS_SKIPPED, List.of(), "No derived column plan is available for validation.");
+        }
+        Optional<Map<String, Object>> actualRule = findEncryptRule(snapshot, encryptRules, databaseType);
+        if (actualRule.isEmpty()) {
+            validationReport.getMismatches().add(validationSupport.createMismatch(WorkflowIssueCode.DDL_STATE_MISMATCH, "ddl", createExpectedDerivedColumnSummary(derivedColumnPlan), "",
+                    "Encrypt rule is missing, so derived column mappings cannot be validated.", "Create or alter the encrypt rule again."));
+            return new ValidationSection(WorkflowLifecycle.STATUS_FAILED, List.of(), "Encrypt rule is missing.");
+        }
+        List<Map<String, Object>> mismatches = new LinkedList<>();
+        addDerivedColumnMismatch(mismatches, "cipher_column", derivedColumnPlan.getCipherColumnName(),
+                WorkflowRuleValueUtils.getRuleValue(actualRule.get(), "cipher_column"), "Cipher column mapping does not match.");
+        addDerivedColumnMismatch(mismatches, "assisted_query_column",
+                derivedColumnPlan.isAssistedQueryColumnRequired() ? derivedColumnPlan.getAssistedQueryColumnName() : "",
+                WorkflowRuleValueUtils.getRuleValue(actualRule.get(), "assisted_query_column"), "Assisted-query column mapping does not match.");
+        addDerivedColumnMismatch(mismatches, "like_query_column",
+                derivedColumnPlan.isLikeQueryColumnRequired() ? derivedColumnPlan.getLikeQueryColumnName() : "",
+                WorkflowRuleValueUtils.getRuleValue(actualRule.get(), "like_query_column"), "LIKE-query column mapping does not match.");
+        if (!mismatches.isEmpty()) {
+            validationReport.getMismatches().addAll(mismatches);
+            return new ValidationSection(WorkflowLifecycle.STATUS_FAILED, createMaskedRules(snapshot, List.of(actualRule.get())).getFirst(),
+                    "Derived column mappings do not match the plan.");
+        }
+        return new ValidationSection(WorkflowLifecycle.STATUS_PASSED, createMaskedRules(snapshot, List.of(actualRule.get())).getFirst(),
+                "Derived column mappings match the encrypt rule exposed by Proxy logical metadata.");
+    }
+    
     private ValidationSection validateRules(final WorkflowContextSnapshot snapshot,
                                             final EncryptWorkflowRequest request, final List<Map<String, Object>> encryptRules, final ValidationReport validationReport, final String databaseType) {
-        Optional<RuleWorkflowFeatureData> ruleFeatureData = getRuleFeatureData(snapshot);
-        if (ruleFeatureData.isPresent()) {
-            return validateExpectedRules(snapshot, ruleFeatureData.get().getExpectedRules(), encryptRules, validationReport, databaseType);
+        Optional<List<Map<String, Object>>> expectedRules = getExpectedRules(snapshot);
+        if (expectedRules.isPresent()) {
+            return validateExpectedRules(snapshot, expectedRules.get(), encryptRules, validationReport, databaseType);
         }
         Optional<Map<String, Object>> actualRule = findEncryptRule(snapshot, encryptRules, databaseType);
         if (WorkflowLifecycleUtils.isDropWorkflow(snapshot)) {
@@ -102,9 +153,9 @@ public final class EncryptWorkflowValidationService implements MCPWorkflowRuntim
                 return new ValidationSection(WorkflowLifecycle.STATUS_PASSED, List.of(), "Encrypt rule has been removed.");
             }
             validationReport.getMismatches().add(validationSupport.createMismatch(WorkflowIssueCode.RULE_STATE_MISMATCH, "rule", "no encrypt rule",
-                    String.valueOf(createMaskedRules(snapshot, List.of(actualRule.get())).get(0)),
+                    String.valueOf(createMaskedRules(snapshot, List.of(actualRule.get())).getFirst()),
                     "Encrypt rule still exists after drop.", "Drop the encrypt rule again or investigate the failure."));
-            return new ValidationSection(WorkflowLifecycle.STATUS_FAILED, createMaskedRules(snapshot, List.of(actualRule.get())).get(0), "Encrypt rule still exists.");
+            return new ValidationSection(WorkflowLifecycle.STATUS_FAILED, createMaskedRules(snapshot, List.of(actualRule.get())).getFirst(), "Encrypt rule still exists.");
         }
         if (actualRule.isEmpty()) {
             validationReport.getMismatches().add(validationSupport.createMismatch(WorkflowIssueCode.RULE_STATE_MISMATCH, "rule", snapshot.getRequest().getColumn(), "",
@@ -130,13 +181,16 @@ public final class EncryptWorkflowValidationService implements MCPWorkflowRuntim
                 WorkflowRuleValueUtils.getRuleValue(actualRule.get(), "like_query_type"), "LIKE-query algorithm type does not match.");
         if (!mismatches.isEmpty()) {
             validationReport.getMismatches().addAll(mismatches);
-            return new ValidationSection(WorkflowLifecycle.STATUS_FAILED, createMaskedRules(snapshot, List.of(actualRule.get())).get(0), "Encrypt rule configuration does not match.");
+            return new ValidationSection(WorkflowLifecycle.STATUS_FAILED, createMaskedRules(snapshot, List.of(actualRule.get())).getFirst(), "Encrypt rule configuration does not match.");
         }
-        return new ValidationSection(WorkflowLifecycle.STATUS_PASSED, createMaskedRules(snapshot, List.of(actualRule.get())).get(0), "Encrypt rule matches the planned columns and algorithms.");
+        return new ValidationSection(WorkflowLifecycle.STATUS_PASSED, createMaskedRules(snapshot, List.of(actualRule.get())).getFirst(), "Encrypt rule matches the planned columns and algorithms.");
     }
     
-    private Optional<RuleWorkflowFeatureData> getRuleFeatureData(final WorkflowContextSnapshot snapshot) {
-        return snapshot.getFeatureData() instanceof RuleWorkflowFeatureData ? Optional.of((RuleWorkflowFeatureData) snapshot.getFeatureData()) : Optional.empty();
+    private Optional<List<Map<String, Object>>> getExpectedRules(final WorkflowContextSnapshot snapshot) {
+        if (snapshot.getFeatureData() instanceof EncryptWorkflowState) {
+            return Optional.of(((EncryptWorkflowState) snapshot.getFeatureData()).getExpectedRules());
+        }
+        return snapshot.getFeatureData() instanceof RuleWorkflowFeatureData ? Optional.of(((RuleWorkflowFeatureData) snapshot.getFeatureData()).getExpectedRules()) : Optional.empty();
     }
     
     private ValidationSection validateExpectedRules(final WorkflowContextSnapshot snapshot, final List<Map<String, Object>> expectedRules, final List<Map<String, Object>> actualRules,
@@ -233,9 +287,40 @@ public final class EncryptWorkflowValidationService implements MCPWorkflowRuntim
         return result;
     }
     
+    private ValidationSection validateSqlExecutability(final MCPFeatureExecutionFacade executionFacade, final String sessionId, final WorkflowContextSnapshot snapshot,
+                                                       final EncryptWorkflowRequest request, final ValidationReport validationReport, final String databaseType) {
+        return validationSupport.validateSqlExecutability(executionFacade, sessionId, snapshot, validationReport,
+                createValidationSqls(snapshot, request, databaseType), "Validation SQLs are executable from the logical view.");
+    }
+    
+    private List<String> createValidationSqls(final WorkflowContextSnapshot snapshot, final EncryptWorkflowRequest request, final String databaseType) {
+        List<String> result = new LinkedList<>();
+        result.add(validationSupport.createProjectionValidationSql(snapshot, databaseType));
+        if (WorkflowLifecycleUtils.isDropWorkflow(snapshot)) {
+            return result;
+        }
+        if (Boolean.TRUE.equals(request.getOptions().getRequiresEqualityFilter())) {
+            result.add(String.format("SELECT %s FROM %s WHERE %s = 'sample'", WorkflowSQLUtils.formatSQLIdentifier(databaseType, snapshot.getRequest().getColumn()),
+                    WorkflowSQLUtils.formatSQLIdentifier(databaseType, snapshot.getRequest().getTable()), WorkflowSQLUtils.formatSQLIdentifier(databaseType, snapshot.getRequest().getColumn())));
+        }
+        if (Boolean.TRUE.equals(request.getOptions().getRequiresLikeQuery())) {
+            result.add(String.format("SELECT %s FROM %s WHERE %s LIKE 'sample%%'", WorkflowSQLUtils.formatSQLIdentifier(databaseType, snapshot.getRequest().getColumn()),
+                    WorkflowSQLUtils.formatSQLIdentifier(databaseType, snapshot.getRequest().getTable()), WorkflowSQLUtils.formatSQLIdentifier(databaseType, snapshot.getRequest().getColumn())));
+        }
+        return result;
+    }
+    
     private Optional<Map<String, Object>> findEncryptRule(final WorkflowContextSnapshot snapshot, final List<Map<String, Object>> encryptRules, final String databaseType) {
         return encryptRules.stream()
                 .filter(each -> WorkflowSQLUtils.isSameIdentifier(databaseType, snapshot.getRequest().getColumn(), WorkflowRuleValueUtils.getRuleValue(each, "logic_column"))).findFirst();
+    }
+    
+    private void addDerivedColumnMismatch(final List<Map<String, Object>> mismatches, final String fieldName, final String expected, final String actual, final String impact) {
+        if (expected.equals(actual)) {
+            return;
+        }
+        mismatches.add(validationSupport.createMismatch(WorkflowIssueCode.DDL_STATE_MISMATCH, "ddl", formatFieldValue(fieldName, expected), formatFieldValue(fieldName, actual), impact,
+                "Recheck DDL and encrypt rule state."));
     }
     
     private void addRuleValueMismatch(final List<Map<String, Object>> mismatches, final String fieldName, final String expected, final String actual, final String impact) {
@@ -260,5 +345,10 @@ public final class EncryptWorkflowValidationService implements MCPWorkflowRuntim
     
     private String formatFieldValue(final String fieldName, final Object value) {
         return String.format("%s=%s", fieldName, value);
+    }
+    
+    private String createExpectedDerivedColumnSummary(final DerivedColumnPlan derivedColumnPlan) {
+        return String.format("cipher=%s, assisted_query=%s, like_query=%s", derivedColumnPlan.getCipherColumnName(),
+                derivedColumnPlan.getAssistedQueryColumnName(), derivedColumnPlan.getLikeQueryColumnName());
     }
 }
